refactor Job JSON to Job File
